--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -1,3 +1,8 @@
+<android.support.v4.widget.DrawerLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/drawer_layout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -292,3 +297,17 @@
 
 
 </RelativeLayout>
+	<!-- The navigation drawer -->
+	<ListView android:id="@+id/left_drawer"
+		android:layout_width="240dp"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:choiceMode="singleChoice"
+		android:divider="#666"
+		android:dividerHeight="1dp"
+		android:background="#333"
+		android:paddingLeft="15sp"
+		android:paddingRight="15sp"
+		/>
+
+</android.support.v4.widget.DrawerLayout>
